[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "codex-client"
version = "0.1.0"
description = "Python protocol core for the Codex app-server protocol."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: tests that run against a real codex app-server process",
]
testpaths = ["tests"]
